--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Viktor Tamayo
-description: Osobní portfolio a projekt AutoDevadesátky
+description: Osobní portfolio
 theme: jekyll-theme-cayman
